agregado de botones al formulario pricipal

--- a/SisVentas/Presentacion/frm_login.resx
+++ b/SisVentas/Presentacion/frm_login.resx
@@ -117,6 +117,174 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAACXFSURBVHhe7d1vrL53Xdhx5G+1WN1wzkSQ0l8Xt1RZJ8Q/yGRMHowx4gMgfbDFBzDlISNmYTiZ
+        iMbSMGDuz8+umZi4BwYZI5GwIiLgxqhpBt26hWgChIV0bQUdoXTaatk+H7v21/Pr55xzn3Nd1/e6ru/3
+        9UreCSnt977P9/5z7uvc1/25nwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwGqujG6ILka3
+        R3dHX4v+r6Rhy+eAfC7I54R8bsjniHyuADpwIbo5uj+qngAk6bHlc0U+Z+RzB7BDXx/dGD0QVQ9ySTqp
+        fO7I55B8LgF24trojqh6UEvSWcrnknxOATbuuuiuqHogS9J5uje6PgI26uronqh6AEvSlL4Y+UsAbNAV
+        0Z1R9cCVpDnK55h8rgE25KaoesBK0pzlcw2wEc+O/jiqHqySNGcPRj4iCBvxb6LqgSpJS3RLBKzs2yJH
+        /5Jadl90VQSs6Gej6gEqSUv2yghYSU7o+v2oenBK0pLluGBgJa+NqgemJC3dJyJgBV8XfTqqHpiStHQ5
+        HRBYwcui6kEpSS3Kk4+BFXw4qh6UktQiLwBgBc+NvhZVD0pJapG3AGAFvxxVD0hJapWTAKExg38kbSEf
+        A4TGDP6RtIUMAoKGDP6RtIWMAobGfjyqHoyS1LJ/HQGNGPwjaQs9EF0TAY28NKoejJLUsndEQEMG/0ha
+        u3uib4qARr4rMvhH0tr93QhoyOAfSWv3n6I8Fwlo5FujP4qqB6QktehPor8aAQ0Z/CNp7d4eAQ3l4J8v
+        RtUDUpJa5MQ/WMFro+oBKUmtcuIfNLa1wT/e/4Nl5efrq8femjnxD1bwsqh6QK7RhyJgOddFD0bV42+t
+        nPgHK9nS4J+cQggs5yNR9dhbMyf+wQq2NPjnd6MnRsAy/l5UPfbWzIl/sJItDf75sQhYxjdGd0XVY2/N
+        nPgHK9jS4J/fj/KjiMAynPgHPGpLg39+JgKW4cQ/4FFbGvzzx9G3RcAynPgHPGpLg39+KQKW4cQ/4FEG
+        /8AYnPgHHGHwD4zBiX/AEQb/QP+c+AccYfAPjMGJf8ARBv9A/5z4Bxxh8A/0z4l/wOMY/AP9c+IfcITB
+        P9A/J/4Bj2PwD/TPiX/AEQb/QP+c+Ac8jsE/0Dcn/gElg3+gb078Ax7H4B/omxP/gJLBP9A3J/4Bj2Pw
+        D/TNiX9AyeAf6JcT/4CSwT/QNyf+ASWDf6BfTvwDSgb/QN+c+AeUDP6BfjnxDziWwT/QJyf+Accy+Af6
+        5cQ/4FgG/0CfnPgHHMvgH+iXE/+AYxn8A31y4h9wLIN/oE9O/ANOZPAP9MmJf8CxDP6BPjnxDziRwT/Q
+        Jyf+AScy+Af648Q/4EQG/0B/nPgHnMrgH+iPE/+AExn8A/1x4h9wKoN/oD9O/ANOZPAP9MeJf8CpDP6B
+        vjjxDziVwT/QHyf+Aacy+Af64sQ/4CAG/0BfnPgHnMrgH+iLE/+Agxj8A/1w4h9wEIN/oC9O/AMOYvAP
+        9MOJf8BBDP6BvjjxDziIwT/QDyf+AQcx+Af64cQ/4GD5WfvqAbtGvxkB57fFE/8+FjnxDzbI4B/ow9XR
+        A1H12ForJ/7BRj032srgn3wbwlECnN8tUfXYWrP8iwSwQe+KqgftGv14BJzPVdF9UfXYWqv/FeX1AjbG
+        4B/ox6ui6rG1Zk78g416S1Q9aNcorwtwfjdH1WNrrZz4Bxtl8A/05baoenytkRP/YMPy/fbqgbtGeR4C
+        MM29UfX4WiMn/sFGGfwD/dnKx/9M/IMNe1lUPXDX6EMRMN1WXgA48Q82LKftVQ/cNTL4B+axhbcAnPgH
+        G/Zd0VYG//xu9MQImG7tkwCd+AcbZ/AP9GntjwE68Q82zOAf6Neag4Cc+AcbZ/AP9GvNUcBO/IMNy6Pt
+        POquHrytM/gHlrHGlwE58Q827rVR9eBdo1+KgPnl1wHnC+zqcbdETvyDjdvS4J/8BEJ+BTGwjJui6rG3
+        RHlZwIblZ+2rB+8a5QwCYDlXRHdG1eNvzvIy8rKADftwVD2A18jgH1hevhWQZ+ZXj8E5yi8SuzYCNszg
+        HxjTddFdUfVYnFJOHLw+AjbO4B8YVx6l3xFVj8fzlGs58ocdyI/atTwj+KQM/oF15OPuxmjKlwXlf5tr
+        eAzDThj8AzziQpTjgu+PqsdoVf67+d/kfwvshME/QOXK6IboYnR7dHeU5wll+b/zn+X/l/9O/rvAzhj8
+        AwCD2dLgn8ykMABo4GVR9Yt4jT4UAQANGPwDAIMx+AcABvTLUfXLeI1+LAIAFvat0R9F1S/j1hn8AwCN
+        /GxU/TJeo5+JAICF5dF2fkNX9cu4dQb/AEAjBv8AwGAM/gGAARn8AwADMvgHAAZj8A8ADMjgHwAYjME/
+        ADAgg38ueXr0wij/CvGO6IPRp6LPRl+KHoiq6z1n+VbM3dHt0cXohujKaASP3f+3R7dGd0S5/38Q5f5n
+        eVvkP8vbJm+j/Hfzv8n/NtcYQd4n8r6R95G8r+R9Ju87I99/Wjpu/6vHdMvc/hxs9ME/ea7B90dvin47
+        ejCqrtva3R/dHF2IerLE/ucLhI9FPxV9X9Tb+SR5H8j7Qt4nqp+/qtf7zxrOs/9r5/anNOrgn+dE+deG
+        /xlV12Wr5S+3G6O9v03yzOgNUR7FVz/nnH0hemt0TbRneZvnbT/lr1C93H/WMMf+r53bn0eNOPjnb0Q5
+        Y+ChqLoOeyn/LH5ttDcvjtba/7zM34heFO1N3tZ5m1c/13na6/1nLXPv/9q5/Rlq8E++N7ylOQdzdG90
+        fbQHW9v/j0cvj/bguuiuqPo5prSn+8+altr/tXP7D26EwT/5p/4PRNVl9lCev7HlV/LfHr03qq77Fnp/
+        dHW0VXnd7omq6z5HW7//rG3p/V87t/+geh/885Qo32Pe04k65+3O6IpoS54cvS66L6qu85bK+8ibo6dG
+        W5K3ad621XWesy3ef7ag1f6vndt/QD0P/slX7fkRmOqyeu2maCv2uv+/Ez072oq8TavruURbuv9sRcv9
+        Xzu3/0B6Hvzzd6L8vHh1WT2XH5/bwkd88n31Pe//l6NXRGvLF1Etzzbfyv1nK1rv/9q5/QfS4+Cf/ETD
+        W6KtvK2xRrdEa+pl//Nn+OloTXlbVtdtyda+/2zJGvu/dm7/AeTRdm+Df54UjfiAvbx8v/2qqLXc/xwy
+        Ul2nPZdT1NYYIpS34RrnTqx1/9matfZ/7dz+A+ht8M/Toi2fZd66V0Ut5f7/u6i6Lj30a1HrkwPzNqyu
+        S4teGY1uzf1fO7d/x3ob/JNHnu+JqrVHLY/EW8n9z1+Q1fXoqfdF+bO2suZfU1ref7aqx79mHZrbv2O9
+        Df7551G19sh9ImohX0yO9LbLL0at3BZV16FFre4/W7bm/q+d279jPQ3+yRPOqnVHL6d7tTDi/ucXFrWQ
+        t2F1+S1qdf/ZsjX3f+3c/p3qafBPftRv5LP9TypPrFzaqPufP/OPREtb8+NnLe4/WzfSx/8uz+3fqV4G
+        /3xHlN8FX62r5R/Ao+//H0b5GfElVZfbstFVezJKXgB0qJfBPzned7QJf2dtyT/h2f+Hy/eIc9TxUqrL
+        bNnoqj0ZJW8BdKiXwT85279aU5da8iQe+3+pn4iWUl1ey0ZX7ckoOQmwM70M/sk/u47wxT5TW+pjPDkj
+        /6tRdZkjlvfF/KbJJVSX17LRVXsySj4G2JleBv/0/JW+c7bUICD7//h+PVpCdVktG121J6NkEFBHehn8
+        88NRtZ6OttQoT/t/fC+K5lZdTstGV+3JCBkF3JleBv/8dlStqaMt9WUe9v/4fiuaW3U5LRtdtScj5MuA
+        OtPD4J8XR9V6Olp+nec10dzs/+nN/VeA6jJaNrpqT3pvqecPVtLL4J/8y0G1po52U7QE+396H4zmVF1G
+        y0ZX7UnvLfX8wUp6GPyTZ1k/FFVr6lJ3RldEc8tPXtj/08s9yk9JzKW6jJaNrtqTnlvq+YOV9DL4J2cG
+        VGvqUvkRz2ujJdj/w5vzewKq9Vs2umpPem3J5w9W0sPgn3zL4PNRtaYeLqd2XR8twf6frc9FU77f4rGq
+        9Vs2umpPemzJ5w9W0svgn++PqjX1cHdES75yt/9n7/nRHKq1Wza6ak96a+nnD1bSy+Cf/JNqtebo5TeV
+        3Rid922VQ9n/s/fGaA7V2i0bXbUnvdTq+YMV9DL4J/ns+dFy9GyO6bwQtfAfo+p66Pg+Es2hWrtlo6v2
+        ZO+1fv5gBb0M/nl6lJ9LrdYdofz45t1RfvPexeiG6MqoldH3/7zl0dUct1O1dstGV+3Jnlr7+YOV9DD4
+        J70wqtZcq/z++zyx8q9FT416t9X9zxOWnhblbfA90c9F+f381X+zVi+IpqrWbdnoqj1pGZxZL4N/Us4N
+        qNZdo1+N/nw0kq3t/5+LjvOM6N1R9d+u0Wuiqap1Wza6ak9aBmfWw+CfR7wjqtZt3ajTsd4ZVfvRukP3
+        P899eVtUrdG6t0dTVeu2bHTVnrQMzqSXwT+PuDWq1m5ZHnmOao/7ny8C3hNVa7UsvzZ5qmrdlo2u2pOW
+        wZn0MPjnsf5bVK3dqnzPebQ/+z/Wf42qfWnVeff/W6K1zwn4VDRVtW7LRlftScvgYL0M/nmsnKpWrd+q
+        fEE1ss9G1b60asr+/3xUrdmqz0RTVeu2bHTVnrQMDtbL4J/HWvsFzejjMfe8/8+LqjVblW+BTVWt27LR
+        VXvSMjhIT4N/Hiv/klCt36rRvxlrz/uffxGr1mxV7t1U1botG121Jy2Dg/Qy+OdyXgCsq9qTlk1Vrdmy
+        qao1Wza6ak9aBgfpZfDP5db+E3QO/BlZtSctm6pas2VTVWu2bHTVnrQMTtXT4J/LrX0SWk6YG1m1Jy2b
+        qlqzZVNVa7ZsdNWetAxO1dPgn8ut/TG0/ChZTpgbVbUnLZuqWrNlU1Vrtmx01Z60DE7U2+Cfy21hEE2O
+        l82TLEdU7UfLpqrWbNlU1ZotG121Jy2DE/U2+OdyWxkFnONlR3wRUO1Fy6aq1mzZVNWaLRtdtSctg2P1
+        OPjnclv6MpocL5sT5kZS7UPLpqrWbNlU1ZotG121Jy2DY/U4+OdyW/s62jwnICfMPT8a4SOC1R60bKpq
+        zZZNVa3ZstFVe9IyKPU6+OdyT48eiKrL3EJ53XJefX5aIWe/fzDKb4HLv1zki5e8/ntW/cw6vKmqNVs2
+        umpP9lR+Ouzu6PboYnRDdGXEzvU6+Kfysai63D2ULxDy+v9U9H3RnB+RbKH6mXR4U1Vrtmx01Z7svfuj
+        m6MLETvV6+CfSv7yrC53j30hemt0TbQH1c+gw5uqWrNlo6v2pJfy4OTGaO5PbrGwngf/VPLIubrsPfdQ
+        9BvRi6Itq667Dm+qas2Wja7ak966I7o2Yid6HvxTyfMd1p4IuGQfj14ebVF1fXV4U1Vrtmx01Z702L3R
+        6N98ugu9D/45zpuj6jr01Pujq6Mtqa6nDm+qas2Wja7ak17Lj5T7S8DG9T745zjPjvLP5tX16Kk8QSdf
+        7Dw12oLqOurwpqrWbNnoqj3puTuj0b8BdbNGGPxzknzPvLouPfY7Ub7oWVt13XR4U1Vrtmx01Z703k0R
+        GzTC4J+T/GBUXZde+3L0imhN1fXS4U1Vrdmy0VV70nsPRj4iuDGjDP45zUej6vr0Wn7a46ejtVTXSYc3
+        VbVmy0ZX7ckI3RKxISMN/jnJi6PqOvVeTvFaY4hQdV10eFNVa7ZsdNWejNB90VURGzHS4J/T/HpUXa/e
+        +7Wo9cmB1fXQ4U1Vrdmy0VV7MkqvjNiA0Qb/nOY7onyFWl2/3ntf9KSoleo66PCmqtZs2eiqPRmlHBfM
+        Bow2+OcQ/zCqrt8I/WLUSnX5OrypqjVbNrpqT0bpExErG3Xwz2meHOVH5arrOUJvilqoLluHN1W1ZstG
+        V+3JKOV0QFY26uCfQzwr2spchNblW0I/Ei2tumwd3lTVmi0bXbUno5SzXljR6IN/DvG3o62cH9G6P4yW
+        Hh1cXa4Ob6pqzZaNrtqTUfICYGWjD/45VH5OvrrOI3RblG+HLKW6TB3eVNWaLRtdtSej5C2AFRn8czb/
+        LKqu9wj9RLSU6vJ0eFNVa7ZsdNWejJKTAFdk8M/Z5EcT3x1V17/38guEnhMtobo8Hd5U1ZotG121J6Pk
+        Y4ArMvjn7HJIzqgvAnI40hKqy9LhTVWt2bLRVXsySgYBrcTgn/PLt07eEVU/S++9KJpbdTk6vKmqNVs2
+        umpPRsgo4BUZ/DNdfk5+tE8HfCSaW3U5OrypqjVbNrpqT0bIlwGtxOCf+fxwdE9U/Wy9NvdfAarL0OFN
+        Va3ZstFVe9J7+XXA10SswOCfeeX3BuRH5aqfr8c+GM2pugwd3lTVmi0bXbUnvXdTxAoM/llGfk7+ddFX
+        oupn7amHomdHc6kuQ4c3VbVmy0ZX7UnP3RldEbECg3+WlX8NGOGrhP9JNJdqfR3eVNWaLRtdtSe9lgef
+        10aswOCfdn4wen9U/dw99Llork9uVOvr8Kaq1mzZ6Ko96bGc+nd9xEoM/mnvh6J8zzz/bF7tw557fjSH
+        am0d3lTVmi0bXbUnvXVH5Mh/ZQb/rOfbozdEn4mq/dhjb4zmUK2tw5uqWrNlo6v2pJceiG6M9vxJry4Y
+        /LMN+TZMHjn/ZPTRKB8g1R7tobz+c6jW1uFNVa3ZstFVe7L3cnR4jvm9ELEBBv9s05XRC6K/H/3T6Nbo
+        k9FnozxhJj8pUe3hFsoXL3n9p6rW1uFNVa3ZstFVe7Kn8sDy7uj26GJ0QzTH8wIzMfhn3/L7B74n+rko
+        v5+/2te1yhcvU1Xrtmyqas2WTVWt2bLRVXvSMjpn8E8/nhFt6cuIXhNNVa3bsqmqNVs2VbVmy0ZX7UnL
+        6JjBP/3J8wjeFlV73Lq3R1NV67ZsqmrNlk1Vrdmy0VV70jI6ZvBPn/JFwHuiap9b9oFoqmrdlk1Vrdmy
+        qao1Wza6ak9aRqcM/unbt0RrnxPwqWiqat2WTVWt2bKpqjVbNrpqT1pGpwz+6d/PR9V+tyrnGkxVrduy
+        qao1WzZVtWbLRlftScvolME//XteVO13q/JTHVNV67ZsqmrNlk1Vrdmy0VV70jI6ZPDPGPIkz2rPW5Un
+        dk5Vrduyqao1WzZVtWbLRlftScvokME/Y/iGqNrzVnkBUK/ZsqmqNVs2umpPWkZnDP4ZR44Vrva9Vd4C
+        qNds2VTVmi0bXbUnLaMzBv+MI79oo9r3VjkJsF6zZVNVa7ZsdNWetIyOGPwzjr8Q/e+o2vtW+RhgvWbL
+        pqrWbNnoqj1pGR0x+GcMOePhvVG17y0zCKhes2VTVWu2bHTVnrSMThj8M4a8nd8RVXveuvwGw6mqdVs2
+        VbVmy6aq1mzZ6Ko9aRmdMPinf/ln/y0c+T/Sq6OpqnVbNlW1ZsumqtZs2eiqPWkZnTD4p09Pi/Js/zzh
+        b+33/C/vB6KpqnVbNlW1ZsumqtZs2eiqPWkZHTD4Z3lXRjdEF6Pbo7ujrez5Gj0Q5Z5MVa3dsqmqNVs2
+        VbXmSOVjOB/L+ZjOx3Y+xue4Xx+quk57au39Ixj8s5wL0c3R/VH1847aR6M5VGu3bKpqzZZNVa05evlY
+        z8d8PvaXVl3+3mu5f8Mz+GcZ+XPkn93zSLf6WUfvjdEcqrVbNlW1ZsumqtbUw+VjP58DlnxOqy63l1rs
+        3/AM/pnftdEdUfUz6uHyvIQ5VGu3bKpqzZZNVa2po+VzQT4nLKG6vN5acv+GZvDP/K6L7oqqn1EP97ko
+        P444h2r9lk1Vrdmyqao19fjuja6P5lZdVo8ttX9DM/hnXldH90TVz6dL/eNoLtX6LZuqWrNlU1Vrqi4P
+        tuY+kq0up9eW2L9hGfwzryuiO6PqZ9OlHoqeFc2luoyWTVWt2bKpqjV1fPkckc8Vc6kuo+fm3r9hGfwz
+        r5ui6mfT0f5DNKfqMlo2VbVmy6aq1tTJ5XPFXKr1e2/O/RuWwT/zyT/9O9v/sH4omlN1GS2bqlqzZVNV
+        a+rkHozm+ohbtX7vzbl/QzL4Z163RNXPpqPli865VZfTsqmqNVs2VbWmTi+fM+ZQrT1Cc+3fkAz+mc9V
+        0X1R9bPpaH89mlt1OS2bqlqzZVNVa+r08jkjnzumqtYeobn2bzgG/8zrVVH1s+lo/z5aQnVZLZuqWrNl
+        U1Vr6rBeGU1VrTtKc+zfcAz+mVeOrKx+Nl3qK9EzoyVUl9eyqao1WzZVtaYOK587pqrWHaU59m8oBv/M
+        77ao+vl0qX8QLaW6vJZNVa3ZsqmqNXVYn4imqtYdpTn2bygG/8wvJ1RVP58e7j9HT46WUl1my6aq1mzZ
+        VNWaOqx87piqWneU5ti/YRj8swwf/zu+P4ieHS2putyWTVWt2bKpqjV1WPlX0KmqdUdpjv0bhsE/y/AC
+        oC4n/v2taGlr7v8cT0Cu/7jZ/2l5AXAGBv8sw1sAdT8ZtbDm/s/xJ0jXf9zs/7Tm2L8hGPyzHCcBPr5/
+        FbWy5v7PcRKS6z9u9n9aTgI8kME/y/ExwKP9atTyBd6a+z/Hx5Bc/3Gz/9OaY/+6Z/DPsgwCutS7o6dG
+        La25/3MMInH9x83+T8sgoAMY/LMso4Af7l9Ea7y1s9b+zzWK1PUfM/s/rbn2r2sG/7Qx8pcB5dn+rU74
+        O84a+z/nl5G4/uNl/6c15/51y+CfNvLrgPMFTvVz91y+uNzCJzpa739+Hek10Vxc/7Gy/9Oae/+6ZPBP
+        WzdF1c/daznhb6n5/ufRcv/zsubm+o+T/Z/WEvvXHYN/2roiujOqfv6eyvfeXh8tOd73PFrtf15GXtbc
+        XP8xsv/TWmr/umPwT3vPiXoezPG+6FnRVuWfQu+Jqus+R/mWx7XRUlz/vrP/01p6/7ph8M96rovuiqq9
+        2Gsfj/5mtAdL7X++sLs+Wprr32f2f1qt9q8LBv+sK1+l3hFV+7GX8uz+W6MXRnsz9/7nWi2PPFz/vrL/
+        02q9f7tm8M825M99Y7S3L+v4TPSmaMt/6j/EHPuf/22uscZ92PXff/Z/Wmvu324Z/LMtF6IcWXl/VO3R
+        2uXHh34r+kfR86L89EhPzrP/+e/mf5P/7dpGvP57z/5Pa0v7tyv5SilPlKg2tXX5i6XXwT/ncWV0Q3Qx
+        uj26O2pxnkbeDvmXmM9G/yX6QPS26DXRD0TfEI3guP3P8n/nP8v/L/+d/He3ptfrX91n95T9n9Ze9m8X
+        DP4BgMEY/AMAAzL4BwAGZPAPAAzG4B8AGJDBPwAwGIN/AGBABv8AwGAM/gGAARn8AwCDMfgHAAZk8A8A
+        DMjgHwAYjME/ADAgg38AYDAG/wDAgAz+AYDBGPwDAAMy+AcABmPwDwAMyOAfABiQwT8AMBiDfwBgQAb/
+        AMBgDP4BgAEZ/AMAgzH4BwAGZPAPAAzG4B8AGJDBPwAwIIN/AGAwBv8AwIDeFVW/jKXeyhe6d0e3Rxej
+        G6IrI+hJ3qfzvp338byv530+7/vu/xyRH7XLj9xVT5bSCN0f3RxdiGDPro3yvpz36eq+XuX+P7C3RNWd
+        QhqtB6IbI9Mn2Ztvjt4ZPRhV9+1Dcv8fTN7QOW63ujNIo3ZHlEdSsHV5vtSro3uj6r58ntz/B7GlwT/S
+        lson1Osj2KrnRZ+Iqvvv1Nz/O7e1wT/S1sqx2I6E2JpnRL8QPRRV99u5cv/vWH7WvrrRJV3qzuiKCNb2
+        lOj10Zej6r66RO7/nfrNqLrBJR3tpgjW9JJorb/Yuv935rnRVgb/SFsvz45+TgStXR29N6rul61y/+9M
+        ftNedUNLqrslglbyE1pvjv5PVN0fW+f+34mroq9G1Y0sqe6+KB87sLRXRJ+PqvvhWrn/d+JVUXUDSzq5
+        V0awlO+Mbo2q+94Wcv/vQI58rG5cSSeXjx2Y2yNT/P4kqu53W8n9vwO3RdWNK+nkcugKzCVnsfxodE9U
+        3d+2lvt/B+YcGSmNVD52YA7fG+U38lX3s63m/t+B/EhHdeNKOrn81kyYotUUvyVy/++AFwDS+fIEyHk9
+        OXpd1HKK39y5/3fAWwDS+fInUM5jzSl+c+b+3wEnAUrny0lQnMUzo1+JqvvSHnP/74CPAUrny8egOMTW
+        pvjNlft/BwwCks6XQSic5uXR56Lq/rP33P87kOMcc6xjdQNLqjMKlZNcF304qu47PeT+35H8YofqRpZU
+        58tQqOxlit/U3P87kl/t6OOA0mH9aZRz2uERT4xeHY3wqSpfB9yhm6LqxpZ0tH8bwSP2OMVvSvm7gs5c
+        Ed0ZVTe4pIdz9M8j/mL0rmiPU/zOW/6OyN8VdOjqaC9fRCGtkaN/epjid56+GF0b0bE8e/WuqLoDSCOX
+        R/9/OWJcL47+e1TdP3ouz224PmIA+Srvjqi6I0ij5uh/XPnX0fdG1f2i9/J3gSP/weT0qhsjnw6QvPc/
+        ql6n+B3Sg9Fbo9wDBnUhypGP90fVnUQaIUf/43lF9Pmouj/0Xg4xyreD4c9cGd0QXYzyIy93R1+LqjuP
+        1FOO/sfS+xS/k8oXPPnCB2AVfyna0iQ1R/9jyCl++SfvEd/2zLc48md/egSwmvyFWz1JrZEz//v3ddGP
+        RqN+BPr9kcl+wOoc/dPS86L8Xvvqtu+934teGgFsgqN/WnhG9AvRSFP8HumrUX6y4akRwCY4+mdpo07x
+        y/Kk7V+JcoQxwKY4+mdJo07xyz4ZvSAC2BxH/yzlmVEe+Va3c+99Kcq/eDwpAtgkR//MLSfYvSG6L6pu
+        557LF9N5jsM3RQCb5eifub08+lxU3b6995HouyOAzXP0z1xyYuOtUXXb9t4XopxnALALjv6Zgyl+pvgB
+        O+PonylM8TPFD9ghR/9MYYofwE45+uc8TPEzxQ/YMUf/nJUpfqb4AR1w9M9ZmOIH0AFH/xzKFD9T/ICO
+        OPrnNKb4meIHdMbRP6cxxQ+gQ47+OY4pfgCdcvRPxRQ/U/yAzjn657FM8TPFDxiAo38eyxQ/gEE4+ieZ
+        4meKHzAQR/+Y4meKHzAgR/9jM8UPYECO/sdlip8pfsDAHP2PxxQ/U/yAwTn6H48pfgA4+h+IKX4A/BlH
+        /2Mwxc8UP4AjHP33zRQ/U/wAHsfRf99M8QOg5Oi/T6b4meIHcCxH//0xxc8UP4BTOfrviyl+AJzK0X8/
+        TPEzxQ/gYI7+988UP1P8AM7E0f/+meIHwJk5+t8vU/wAOBdH//tkip8pfgCTOPrfF1P8TPEDmMzR/76Y
+        4gfALBz974Mpfqb4AczG0f/2meJnih/A7Bz9b5spfgDMztH/dpniZ4ofwGIc/W+PKX6m+AEsytH/9pji
+        B8DiHP1vhyl+ADTh6H8bTPEzxQ+gKUf/6zLFzxQ/gOYc/a/LFD8AVuHofx2m+JniB7AaR//tmeJnih/A
+        6hz9t2WKHwCrc/Tfjil+pvgBbIaj/+WZ4meKH8CmOPpfnil+AGyOo//lmOIHwCY5+l+GKX6m+AFsmqP/
+        eZniZ4ofwOY5+p+XKX4A7IKj/3mY4meKH8BuOPqfzhQ/U/wAdsfR/zSm+AGwO47+z88UP1P8AHbL0f/Z
+        meJnih/Arjn6PztT/ADYPUf/hzPFD4AuOPo/jCl+pvgBdMXR/8lM8TPFD6A7jv5PZoofAF1y9F8zxc8U
+        P4BuOfp/PFP8TPED6J6j/6NM8QOge47+LzHFzxQ/gGE4+jfFzxQ/gME4+jfFzxQ/gAGNfPRvih8AQxr1
+        6N8UP1P8AIY22tG/KX6m+AEMb7Sjf1P8ACCMcvRvip8pfgD8fyMc/ZviZ4ofAJfp/ejfFD8AuEzPR/+m
+        +JniB8Axejz6N8XPFD8ATtDj0b8pfgBwip6O/k3xA4AD9HL0b4qfKX4AnMHej/5N8TPFD4Az2vvRvyl+
+        AHAOez36N8XPFD8AzmmPR/+m+JniB8BEezv6N8UPACba09G/KX6m+AEwkz0c/ZviZ4ofADPaw9G/KX4A
+        MLMtH/2b4gcAC9jq0b8pfqb4AbCgrR39/5XIFD8AWFD+eT1/6Va/iNbof0S3X/bPRunT0UsiAFjclo7+
+        R80UPwCa2tp7/6Nlih8Aq3D0v16m+AGwCkf/62SKHwCrcvTfNlP8AFido/+2meIHwCY4+m+TKX4AbIaj
+        /+UzxQ+AzXH0v2ym+AGwOY7+l+v3opdGALA5jv7nzxQ/ADbN0f+8meIHwC44+p8vU/wA2AVH//Nkih8A
+        u+Lof1r54skUPwB2xdH/tEzxA2CXHP2fL1P8ANgtR/9nzxQ/AHbP0f/ZMsUPgN1z9H94pvgB0A1H/6dn
+        ih8AXXH0f3Km+AHQJUf/x2eKHwBdcvRfZ4ofAF1z9H+0fDFkih8AXXP0fzRT/AAYgqP/hzPFD4BhfGf0
+        p1H1C3GUcopffqzv6yMAGMLoR/+m+AEwnJHf+zfFD4BhjXj0b4ofAEMb7ejfFD8ACCMd/ZviBwBhlDP/
+        741eHT0xAoDhXYyqX5i9ZIofAFzmG6OvRNUvzh76cHRdBAA8xqui6hfn3jPFDwBOcHNU/QLda6b4AcAB
+        bouqX6R7zBQ/ADhQnhlf/TLdU5+OXhIBAAd6IKp+qe4hU/wA4Jz2+ALAFD8AmGhvbwHcHn1vBABMsJeT
+        AL8UvS56UgQATLT1jwHmFL93Rt8cAQAz2fIgoI9E3x0BADO7Krovqn4Br9Xno1dEAMCCbomqX8StM8UP
+        ABrK6XlrfxzwvdHVEQDQ0E1R9Yt56UzxA4AVXRHdGVW/pJfoy9Hro6dEAMCK8k/w90TVL+y5MsUPADbo
+        uuiuqPrlPbVPRi+IAIANuja6I6p+iZ+nHDf86uiJEQCwYflRvBujKZ8OyP/WFD8A2KELUY4Lvj+qfslX
+        5b/7L6NnRQDAjl0Z3RBdjPIb+e6O8oS+LP93/rP8//LfyX8XAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAABgIE94wv8DChuEU3mo9toAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
